<resources>
    <string name="app_name">Mark Recorder</string>
    <string name="title_records">Records</string>
    <string name="title_folders">Folders</string>
    <string name="title_settings">Settings</string>
    <string name="title_recent_records">recent</string>
    <string name="title_your_folders">folders</string>
    <string name="extended_button">Start recording</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="settings">SETTINGS</string>
    <string name="marks">Marks</string>
    <string name="chronometer" translatable="false">00:00:00</string>
    <string name="hint_lecture">Record name</string>
    <string name="hint_folder">Create a folder or choose existing</string>
    <string name="title_permission">Permissions denied</string>
    <string name="permissions_required">App requires RECORD_AUDIO permission to access mic and WRITE_EXTERNAL_STORAGE to
        save recorded audio
    </string>
    <string name="info_lecture_configuration">Your data is recorded, you can configure options</string>
    <string name="none_folder">"None(create folder)"</string>
    <string name="ok" translatable="false">@android:string/ok</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="is_not_valid">Cannot be empty</string>
    <string name="card_title_name"><![CDATA[<b>Record name:</b> %1$s]]></string>
    <string name="card_title_folder"><![CDATA[<b>Folder:</b> %1$s]]></string>
    <string name="card_title_date"><![CDATA[<b>Date:</b> %1$s]]></string>
    <string name="card_title_duration"><![CDATA[<b>Duration:</b> %1$s]]></string>
    <string name="create_folder">Folder creation</string>
    <string name="choose_folder">Choose folder</string>
    <string name="records_count">%d records</string>
    <string name="hint_mark_name">Mark\'s name</string>
    <string name="mark_name_edit">Mark\'s name editing</string>
    <string name="folder_name">Folder name</string>
    <string name="now_playing_record_name"><![CDATA[Now playing:<br /><b>%1$s</b>]]></string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="rename_mark">Mark renaming</string>
    <string name="rename_record">Record renaming</string>
    <string name="rename_folder">Folder renaming</string>
    <string name="hint_record_rename">Record name</string>
    <string name="hint_folder_rename">Folder rename</string>
    <string name="confirm_folder_delete">Confirm folder deleting</string>
    <string name="folder_deleting_warning">Are you sure you want delete this folder? All records in folder also will be deleted</string>
    <string name="empty_records_emoji">(·_·)</string>
    <string name="empty_folders_emoji">(·.·)</string>
    <string name="empty_records_explanation">You haven\'t made any record yet. Create record by tapping the button below</string>
    <string name="empty_folders_explanation">You haven\'t folders! Change it by tapping the plus button below</string>
    <string name="setting_empty">There is empty. This feature is not ready yet</string>
</resources>
