<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    tools:context=".ui.recorder.lectureConfig.RecordConfigFragment">

    <ImageView
        android:id="@+id/iv_thubms_up"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/image"
        app:layout_constraintBottom_toTopOf="@id/line_top"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/info_lecture_configuration"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/line_top" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_layout_lecture"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@android:color/transparent"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/ti_layout_folder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_info"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_lecture_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_lecture" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_layout_folder"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/image_btn_choose_folder"
        app:layout_constraintTop_toBottomOf="@id/ti_layout_lecture">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_folder_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_folder" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/image_btn_choose_folder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ti_layout_folder"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_list"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/ti_layout_lecture"
        app:layout_constraintLeft_toRightOf="@id/ti_layout_folder"
        app:layout_constraintTop_toTopOf="@id/ti_layout_folder" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/cancel_button"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_confirm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_confirm"
        app:layout_constraintTop_toTopOf="@id/btn_confirm" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/confirm_button"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_layout_folder" />

</androidx.constraintlayout.widget.ConstraintLayout>
