<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/LightTheme.Settings"
    tools:context=".ui.recorder.lectureConfig.LectureConfigFragment">

    <ImageView
        android:id="@+id/iv_thubms_up"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/image"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toTopOf="@id/line_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/info_lecture_configuration"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/line_top"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/cancel_button"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_confirm"
        app:layout_constraintTop_toTopOf="@id/line_bottom" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:text="@string/confirm_button"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/line_bottom" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_layout_lecture"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:errorEnabled="true"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintTop_toBottomOf="@id/tv_info"
        app:layout_constraintBottom_toTopOf="@id/ti_layout_folder"
        app:layout_constraintLeft_toLeftOf="@id/ti_layout_folder"
        app:layout_constraintRight_toRightOf="@id/ti_layout_folder">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_lecture_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_lecture" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_layout_folder"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/checkbox_download"
        app:layout_constraintLeft_toLeftOf="@id/checkbox_download"
        app:layout_constraintRight_toRightOf="@id/checkbox_download">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_folder_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_folder" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkbox_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layoutDirection="rtl"
        android:text="@string/hint_download"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@id/line_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>
